# 02-langchain-beginners

./: .gitignore  00_api_keys_and_env.ipynb  01_fundamentals_concepts.ipynb  02_llm_app_architectures.ipynb  03_load_env_and_basic_model.ipynb  03_rag_introduction.ipynb  04_prompt_templates.ipynb  05_chains.ipynb  06_chain_types.ipynb  06_chains.ipynb  07_builtin_functions.ipynb  08_composing_chains.ipynb  09_rag_introduction.ipynb  10_data_loaders.ipynb  11_text_splitters_recursive.ipynb  12_text_embeddings.ipynb  13_vector_stores.ipynb  14_vectorstore_as_retriever.ipynb  15_memory_with_langgraph.ipynb  README.md  pyproject.toml  test
data/: renewable_energy.txt
