[project]
name = "02-langchain-beginners"
version = "0.1.0"
description = "Learn LangChain fundamentals through practical Jupyter notebooks"
requires-python = ">=3.10,<3.13"

dependencies = [
  # --- Jupyter environment ---
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
  "python-dotenv>=1.0",

  # --- LangChain modern stack (LCEL) ---
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",

  # --- Providers ---
  "langchain-openai>=0.2.0",
  "langchain-groq>=0.1.0",       # opcional (OSS via Groq)
  "openai>=1.109.1",

  # --- LangGraph (memoria/workflows) ---
  "langgraph>=0.2.39",
  "langgraph-checkpoint-sqlite>=2.0.0",

  # --- Vector Stores (RAG) ---
  "faiss-cpu>=1.8.0",            # puedes usar FAISS...
  "chromadb>=0.5.5",             # ...y/o Chroma
  "langchain-chroma>=0.1.0",

  # --- Tokenization ---
  "tiktoken>=0.7.0",

  # --- Loaders/Utils usados en cuadernos ---
  "wikipedia>=1.4.0",
  "numpy>=1.26",

  # --- Web demos (opcionales) ---
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # --- Utilidades ---
  "requests>=2.32.5",
  "pydantic>=2.8",
  "pydantic-settings>=2.11.0",

  # --- Extras opcionales útiles ---
  "langchainhub>=0.1.15"
]

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "pytest>=8.3.0"
]

[tool.uvicorn]
factory = false